// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 Default render 1`] = `
<div>
  <div
    class="MuiBox-root css-1by4xjv"
  >
    <span>
      children
    </span>
  </div>
</div>
`;

exports[`2 Render with custom style 1`] = `
<div>
  <div
    class="MuiBox-root css-n0y69c"
  >
    <span>
      children
    </span>
  </div>
</div>
`;
